--- a/shop/templates/shop/layout.html
+++ b/shop/templates/shop/layout.html
@@ -6,56 +6,128 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'shop/home.css' %}">  
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'shop/home.css' %}">
 
   <title>Bike shop</title>
 </head>
 
 <body>
+<!--navbar-->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top pt-4 pr-4">
+        <a href="/" class="navbar-brand brand-home">BIKE SHOP</a>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Galery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contacts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn btn-outline-success my-2 my-sm-0" href="/admin">Log in</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!--end navbar-->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Bicikleta Durres</a>
-  {% comment %} <span class="text-light">Bli bicikleta | Riparime bicikletash | Bicikleta ne Durres</span> {% endcomment %}
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span> 
-    {% comment %} per mobile {% endcomment %}
-  </button>
+    <!--carousel-->
+        <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item main-carousel-item position-relative active">
+                    <img src="media/bicikleta-cover.jpg" class="d-block w-100" alt="cover-1">
+                    <div class="carousel-caption d-none d-md-block w-100 h-100">
+                        <div class="text-center font-italic caption-text w-100 py-4">
+                            <h1 class="display-4">Bli dhe riparo bicikleten tende</h1>
+                            <h3 class="font-weight-bolder">Bicikleta ne shitje te reja dhe te perdorura</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item main-carousel-item position-relative">
+                    <img src="https://images.unsplash.com/photo-1542245796-946699811998?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" class="d-block w-100" alt="cover-2">
+                    <div class="carousel-caption d-none d-md-block w-100 h-100">
+                        <div class="text-center font-italic caption-text w-100 py-4">
+                            <h1 class="display-4">Bli dhe riparo bicikleten tende 2</h1>
+                            <h3 class="font-weight-bolder">Bicikleta ne shitje te reja dhe te perdorura</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item main-carousel-item position-relative">
+                    <img src="https://images.unsplash.com/photo-1485965120184-e220f721d03e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="d-block w-100" alt="cover-2">
+                    <div class="carousel-caption d-none d-md-block w-100 h-100">
+                        <div class="text-center font-italic caption-text w-100 py-4">
+                            <h1 class="display-4">Bli dhe riparo bicikleten tende 2</h1>
+                            <h3 class="font-weight-bolder">Bicikleta ne shitje te reja dhe te perdorura</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item main-carousel-item position-relative">
+                    <img src="https://images.unsplash.com/photo-1576435728678-68d0fbf94e91?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1503&q=80" class="d-block w-100" alt="cover-2">
+                    <div class="carousel-caption d-none d-md-block w-100 h-100">
+                        <div class="text-center font-italic caption-text w-100 py-4">
+                            <h1 class="display-4">Bli dhe riparo bicikleten tende 2</h1>
+                            <h3 class="font-weight-bolder">Bicikleta ne shitje te reja dhe te perdorura</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="fas fa-caret-left p-0 pr-4 text-light" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="fas fa-caret-right p-0 pl-4 text-light" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    <!--end carousel-->
 
-  <div class="collapse navbar-collapse my-2 my-lg-0" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Na kontaktoni</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="/admin"  role="button"  aria-haspopup="true" aria-expanded="false">
-          Admin
-        </a>
-      </li>
-    </ul>
-  
-  </div>
-</nav>
-
-<header class="masthead">
-  <div class="container h-100">
-    <div class="row h-100 align-items-center">
-      <div class="col-12 text-center">
-        <h1 class=" text-light">Bli dhe riparo bicikleten tende</h1>
-        <p class="lead text-light">Bicikleta ne shitje te reja dhe te perdorura</p>
-      </div>
-    </div>
-  </div>
-</header>
-
-    <div class="container" style="margin-top:50px">
+    <div class="container mt-5">
         {% block content %}
         {% endblock %}
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            // menu [desktop]
+            const navbar = $('.navbar-expand-lg');
+            const logo = $('.brand-home');
+
+            const animateNavbar = () => {
+                if ($(this).scrollTop() > 120) {
+                    navbar.removeClass('pt-4').addClass('bg-white shadow-sm');
+                    logo.css('opacity', '1');
+                }
+                if ($(this).scrollTop() < 120) {
+                    navbar.removeClass('bg-white shadow-sm').addClass('pt-4');
+                    logo.css('opacity', '0');
+                }
+            }
+
+            if ($(window).innerWidth() > 991) {
+                // at the beginning
+                animateNavbar();
+
+                // when scroll
+                $(window).scroll(function () {
+                    animateNavbar();
+                })
+            }
+        });
+    </script>
 </body>
 
 </html>
