add search page

--- a/shop/templates/shop/layout.html
+++ b/shop/templates/shop/layout.html
@@ -23,10 +23,11 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto">    
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">Galery</a>
                 </li>
@@ -35,6 +36,18 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn btn-outline-success my-2 my-sm-0 py-1 login" href="/admin">Log in</a>
+                </li>
+                </li>
+                <li class="nav-item">
+                    <form method="POST">
+                       {% csrf_token %}
+                        <div class="search">
+                            {{form.search}}
+                            <button type="submit" class="searchButton">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </div>
+                   </form>
                 </li>
             </ul>
         </div>
