--- a/shop/static/shop/home.css
+++ b/shop/static/shop/home.css
@@ -77,3 +77,49 @@
     }
 }
 
+/* search box */
+
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+      padding-left:5px;
+
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #28a745;
+  border-right: none;
+  padding: 5px;
+  height: 36px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus{
+  color: #28a745;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #28a745;
+  background: #28a745;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
