--- a/shop/templates/shop/layout.html
+++ b/shop/templates/shop/layout.html
@@ -86,6 +86,10 @@
                     animateNavbar();
                 })
             }
+
+            $('#goBack').click(() => {
+                window.history.back();
+            });
         });
     </script>
 </body>
