--- a/shop/templates/shop/details.html
+++ b/shop/templates/shop/details.html
@@ -1,30 +1,21 @@
 {% extends 'shop/layout.html' %}
 
+{% load static %}
+{% block extrahead  %}
+    <link rel="stylesheet" href="{% static 'shop/fix_navbar.css' %}">
+{% endblock %}
+
 {% block content %}
 
-<style>
-    #navbarNav .navbar-nav .nav-link {
-        color: #000;
-    }
-    .brand-home {
-        opacity: 1 !important;
-    }
-    .bike-img {
-        width: 100%;
-        max-width: 800px;
-        height: auto;
-    }
-</style>
-
-<div class="container mt-5 pt-5">
+<div class="container mt-5 pt-4">
     <div class="row align-items-center">
         <div class="col-md-12">
             <!-- Breadcrumbs -->
             <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Library</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Data</li>
+              <ol class="breadcrumb bg-transparent pl-0 mb-0">
+                <li class="breadcrumb-item"><a href="/search?size={{ bike.size }}">Madhesia:{{bike.size}}</a></li>
+                <li class="breadcrumb-item"><a href="#">{{ bike.bike_categories }}</a></li>
+                <li class="breadcrumb-item active" aria-current="page">{{ bike.name }}</li>
               </ol>
             </nav>
         </div>
