--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -85,9 +85,9 @@
                         <img src="{{bike.image.url}}" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">{{bike.name}}</h5>
-                            <p class="card-text">{{bike.description}}</p>
+                            <p class="card-text text-truncate">{{bike.description}}</p>
                             <div class="d-flex align-items-center justify-content-between mt-1">
-                                <span class="product-price">{{bike.price}} ALL  </span>
+                                <span class="product-price">{{bike.price}} &euro;</span>
                                 <small class="text-muted">Madhesia :{{bike.size}}</small>
                             </div>
                         </div>
@@ -111,9 +111,9 @@
                         <img src="{{bike.image.url}}" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">{{bike.name}}</h5>
-                            <p class="card-text">{{bike.description}}</p>
+                            <p class="card-text text-truncate">{{bike.description}}</p>
                             <div class="d-flex align-items-center justify-content-between mt-1">
-                                <span class="product-price">{{bike.price}} ALL  </span>
+                                <span class="product-price">{{bike.price}} &euro;</span>
                                 <small class="text-muted">Madhesia :{{bike.size}}</small>
                             </div>
                         </div>
