--- a/shop/templates/shop/layout.html
+++ b/shop/templates/shop/layout.html
@@ -56,6 +56,15 @@
         {% block content %}
         {% endblock %}
 
+    <!-- FOOTER -->
+      <footer class="footer shadow-sm">
+          <div class="container">
+              <span class="float-right"><a href="#">Back to top</a></span>
+              <span>&copy; 2020 Bike Shop, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></span>
+          </div>
+      </footer>
+
+{% block scripts %}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -92,6 +101,7 @@
             });
         });
     </script>
+{% endblock %}
 </body>
 
 </html>
