--- a/shop/static/shop/home.css
+++ b/shop/static/shop/home.css
@@ -95,12 +95,14 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
 }
 
 .footer > .container {
   padding-right: 15px;
   padding-left: 15px;
+}
+.footer > p {
+    line-height: initial;
 }
 
 @media (min-width: 1400px) {
